# ShadowLine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  SECURITY.md
.agents/skills/: audit-chain.md  blast-radius.md  integration-graph.md  kill-switch.md  severing-drill.md  skill-management.md  supply-chain-scan.md  velocity-clock.md
src/: lib.rs  main.rs  splash.rs  theme.rs
src/ai/: codex_client.rs  mod.rs  plan_parser.rs
src/connectors/: common.rs  github.rs  mod.rs  salesforce.rs  slack.rs
src/core/: blast_radius.rs  graph.rs  kill_switch.rs  mod.rs  models.rs  validator.rs  velocity.rs
src/data/: migrations.rs  mod.rs  queries.rs  schema.rs
src/plugins/: executor.rs  manifest.rs  mod.rs  registry.rs
src/scanner/: agent_skills.rs  mod.rs  npm.rs
src/security/: audit_log.rs  credential_vault.rs  mod.rs  prompt_firewall.rs
src/tui/: command.rs  dashboard.rs  mod.rs
