[package]
name = "shadowline"
version = "0.1.0"
edition = "2024"
description = "The agentic incident response engine - velocity clock, kill switch, supply chain scanner"
license = "MIT"
repository = "https://github.com/shadowline-dev/shadowline"

[[bin]]
name = "shadowline"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Crypto
ring = "0.17"
zeroize = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Keychain
keyring = "3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# File system
dirs = "6"
walkdir = "2"

# Package parsing
regex = "1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
